--- a/pet_care/app/src/main/AndroidManifest.xml
+++ b/pet_care/app/src/main/AndroidManifest.xml
@@ -27,6 +27,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".PetsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".LkActivity"
             android:exported="false">
             <meta-data
