--- a/pet_care/app/src/main/AndroidManifest.xml
+++ b/pet_care/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Pet_care"
         tools:targetApi="31">
         <activity
+            android:name=".FavoriteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MyCareActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignUp"
             android:exported="false">
             <meta-data
