--- a/pet_care/app/src/main/AndroidManifest.xml
+++ b/pet_care/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Pet_care"
         tools:targetApi="31">
         <activity
+            android:name=".TransactionsActivity"
+            android:exported="false" />
+        <activity
             android:name=".PetProfileActivity"
             android:exported="false" />
         <activity
@@ -61,8 +64,10 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
